force-app/main/default/objects/NONB__c/NONB__c.object-meta.xml
<CustomObject>
    <label>NONB</label>
    <nameField>
        <label>NONB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NONB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>