force-app/main/default/objects/NONB__c/fields/DepPickList__c.field-meta.xml
<CustomField>
    <fullName>DepPickList__c</fullName>
    <label>DepPickList</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>picklistField__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OneDep</fullName>
            </value>
            <value>
                <fullName>TwoDep</fullName>
            </value>
            <value>
                <fullName>ThreeDep</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>