force-app/main/default/objects/NONB__c/fields/oppName__c.field-meta.xml
<CustomField>
    <fullName>oppName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>NONB</relationshipLabel>
    <relationshipName>NONB</relationshipName>
    <type>Lookup</type>
</CustomField>