force-app/main/default/objects/NONB__c/fields/picklistField__c.field-meta.xml
<CustomField>
    <fullName>picklistField__c</fullName>
    <label>picklistField</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>